[package]

name = "sersve"
version = "0.0.1"
authors = ["Till Hoeppner <till@hoeppner.ws>"]

[profile.release]
lto = true

[[bin]]
name = "sersve"
path = "src/sersve.rs"

[dependencies]
iron = "~0.0.5"
glob = "~0.1.0"
conduit-mime-types = "~0.5.0"

[dependencies.persistent]
git = "https://github.com/iron/persistent"

[dependencies.rust-mustache]
git = "https://github.com/erickt/rust-mustache"
